add_executable(exec4.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.1.c)
add_executable(exec4.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.2.c)
add_executable(exec4.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.3.c)
add_executable(exec4.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.4.c)
add_executable(exec4.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.5.c)
add_executable(exec4.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.6.c)
add_executable(exec4.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.7.c)
add_executable(exec4.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec4.8.c)