add_executable(exec5.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.1.c)
add_executable(exec5.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.2.c)
add_executable(exec5.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.3.c)
add_executable(exec5.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.4.c)
add_executable(exec5.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.5.c)
add_executable(exec5.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.6.c)
add_executable(exec5.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.7.c)
add_executable(exec5.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.8.c)
add_executable(exec5.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec5.9.c)