add_executable(exec6.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.1.c)
add_executable(exec6.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.2.c)
add_executable(exec6.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.3.c)
add_executable(exec6.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.4.c)
add_executable(exec6.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.5.c)
add_executable(exec6.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.6.c)
add_executable(exec6.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.7.c)
add_executable(exec6.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.8.c)
add_executable(exec6.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.9.c)
add_executable(exec6.10.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.10.c)
add_executable(exec6.11.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.11.c)
add_executable(exec6.12.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.12.c)
add_executable(exec6.13.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.13.c)
add_executable(exec6.14.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.14.c)
add_executable(exec6.15.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.15.c)
add_executable(exec6.16.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.16.c)
add_executable(exec6.17.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.17.c)
add_executable(exec6.18.x ${CMAKE_CURRENT_SOURCE_DIR}/exec6.18.c)