add_executable(exec7.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.1.c)
add_executable(exec7.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.2.c)
add_executable(exec7.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.3.c)
add_executable(exec7.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.4.c)
add_executable(exec7.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.5.c)
add_executable(exec7.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.6.c)
add_executable(exec7.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.7.c)
add_executable(exec7.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.8.c)
add_executable(exec7.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.9.c)
add_executable(exec7.10.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.10.c)
add_executable(exec7.11.x ${CMAKE_CURRENT_SOURCE_DIR}/exec7.11.c)
