add_executable(exec9.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.1.c)
add_executable(exec9.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.2.c)
add_executable(exec9.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.3.c)
add_executable(exec9.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.4.c)
add_executable(exec9.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.5.c)
add_executable(exec9.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.6.c)
add_executable(exec9.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.7.c)
add_executable(exec9.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.8.c)
add_executable(exec9.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.9.c)
add_executable(exec9.10.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.10.c)
add_executable(exec9.11.x ${CMAKE_CURRENT_SOURCE_DIR}/exec9.11.c)