add_executable(exec10.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.1.c)
add_executable(exec10.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.2.c)
add_executable(exec10.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.3.c)
add_executable(exec10.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.4.c)
add_executable(exec10.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.5.c)
add_executable(exec10.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.6.c)
add_executable(exec10.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.7.c)
add_executable(exec10.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.8.c)
add_executable(exec10.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.9.c)
add_executable(exec10.10.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.10.c)
add_executable(exec10.11.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.11.c)
add_executable(exec10.12.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.12.c)
add_executable(exec10.13.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.13.c)
add_executable(exec10.14.x ${CMAKE_CURRENT_SOURCE_DIR}/exec10.14.c)