add_executable(exec11.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.1.c)
add_executable(exec11.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.2.c)
add_executable(exec11.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.3.c)
add_executable(exec11.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.4.c)
add_executable(exec11.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.5.c)
add_executable(exec11.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.6.c)
add_executable(exec11.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.7.c)
add_executable(exec11.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.8.c)
add_executable(exec11.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.9.c)
add_executable(exec11.10.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.10.c)
add_executable(exec11.11.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.11.c)
add_executable(exec11.12.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.12.c)
add_executable(exec11.13.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.13.c)
add_executable(exec11.14.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.14.c)
add_executable(exec11.15.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.15.c)
add_executable(exec11.16.x ${CMAKE_CURRENT_SOURCE_DIR}/exec11.16.c)