add_executable(exec12.1.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.1.c)
add_executable(exec12.2.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.2.c ${CMAKE_CURRENT_SOURCE_DIR}/exec12-2a.c)
add_executable(exec12.3.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.3.c ${CMAKE_CURRENT_SOURCE_DIR}/exec12-2a.c)
add_executable(exec12.4.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.4.c)
add_executable(exec12.5.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.5.c)
add_executable(exec12.6.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.6.c)
add_executable(exec12.7.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.7.c)
add_executable(exec12.8.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.8.c)
add_executable(exec12.9.x ${CMAKE_CURRENT_SOURCE_DIR}/exec12.9.c)